; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_drain.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_drain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ao*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ao_drain(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  store %struct.ao* %0, %struct.ao** %2, align 8
  %3 = load %struct.ao*, %struct.ao** %2, align 8
  %4 = getelementptr inbounds %struct.ao, %struct.ao* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (%struct.ao*)*, i32 (%struct.ao*)** %6, align 8
  %8 = icmp ne i32 (%struct.ao*)* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load %struct.ao*, %struct.ao** %2, align 8
  %11 = getelementptr inbounds %struct.ao, %struct.ao* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.ao*)*, i32 (%struct.ao*)** %13, align 8
  %15 = load %struct.ao*, %struct.ao** %2, align 8
  %16 = call i32 %14(%struct.ao* %15)
  br label %17

17:                                               ; preds = %9, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
